update - giao dien

--- a/index - v1.html
+++ b/index - v1.html
@@ -10,7 +10,7 @@
   <header>
     <h1>MangaColor</h1>
     <div class="search-box">
-      <input type="text" id="searchInput" placeholder="🔍 Tìm truyện...">
+      <input type="text" id="searchInput" placeholder="Tìm truyện...">
       <button onclick="searchManga()">Tìm</button>
     </div>
   </header>
@@ -22,7 +22,7 @@
 
   <script src="script.js"></script>
   <script>
-    loadMangaList();  // Load danh sách truyện khi mở trang
+    loadMangaList();  // Gọi khi vào trang
   </script>
 </body>
 </html>
