update - add logo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
   <header>
-    <h1>MangaColor</h1>
+    <div class="logo">
+      <a href="index.html">
+        <img src="images/mangacolor_logo.png" alt="MangaColor Logo">
+        <span>MangaColor</span>
+      </a>
+    </div>
     <div class="search-box">
       <input type="text" id="searchInput" placeholder="🔍 Tìm truyện...">
       <button onclick="searchManga()">Tìm</button>
