update - favicl logo

--- a/detail.html
+++ b/detail.html
@@ -5,11 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chi tiết truyện - MangaColor</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/png" href="images/favicon.png">
+
 </head>
 <body>
   <header>
-    <h1><a href="index.html">MangaColor</a></h1>
+    <div class="logo">
+      <a href="index.html">
+        <img src="images/mangacolor_logo.png" alt="MangaColor Logo">
+        <span>MangaColor</span>
+      </a>
+    </div>
   </header>
+
 
   <main>
     <div id="manga-detail" class="manga-detail"></div>
